<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layout_weight="10"
    tools:context=".MainActivity">

    <!--Header-->
    <TextView
        android:id="@+id/pitchheader"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/film_production_helper"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Please select a film:-->
    <TextView
        android:id="@+id/pleaseselectactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="56dp"
        android:text="@string/please_select_a_film"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pitchheader" />

    <!--Test Film button: https://www.youtube.com/watch?v=cOeK32o8eB4-->
    <Button
        android:id="@+id/testfilmbutton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:drawableTop="@drawable/ic_movie_clapper_"
        android:text="@string/test_film_l"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pleaseselectactivity" />

</android.support.constraint.ConstraintLayout>